Fixed upload button border visibility in dark mode

--- a/src/styles/NavbarComponent.scss
+++ b/src/styles/NavbarComponent.scss
@@ -54,6 +54,10 @@
     display: flex;
     justify-content: center;
     margin: auto;
+    border: 1px solid white;
+}
+
+.dark #upload-button{
     border: 1px solid black;
 }
 
